[package]
name = "bevypractice"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.2.1"
bevy = "0.15.2"
bevy-tnua = "0.21.0"
bevy-tnua-avian2d = "0.2.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
